--- a/plugin.xml
+++ b/plugin.xml
@@ -94,7 +94,7 @@
     <source-file src="src/android/res/xml/sharing_paths.xml" target-dir="res/xml"/>
           
     <preference name="ANDROID_SUPPORT_V4_VERSION" default="24.1.1+"/>
-    <framework src="com.android.support:support-v4:$ANDROID_SUPPORT_V4_VERSION" />
+    <framework src="com.android.support:support-v4:24.1.1+" />
     
   </platform>
 
